bynkc/tests/fixtures/positive/60_uses_multiple/src/b/main.karn
commons b

type Beta = String where NonEmpty
