bynkc/tests/fixtures/negative/140_reserved_bynk_name/src/bynk/foo.karn
commons bynk.foo

type Tag = String
